[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,10 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Ankur, and this is my first webapp!!
-        </div>
+        <div id="header"></div>
+	    <div class="right"></div>
+	    <div class="left"></div>
+	    <div id="footer"></div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
