[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
 			<a href="https://mail.google.com/mail/u/0/#inbox"><p id="email">ankur.sinha.95@gmail.com</p></a>
 		</div>
 		<div class="left">
-                
+                		    <img src="C:\Users\ankur sinha\Desktop\KACHRA\aa.jpeg" style="height: 50px; width: 30px;">
 		</div>
 		<div class="right">
 			<h4>Objective</h4>
