--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,36 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Article One | Ankur Sinha
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <div>
+            <a href="/">About Me</a>
+        </div>
+        <div>
+            <a href="/">Contact</a>
+        </div>
+        <div>
+            <a href="/">Skills</a>
+        </div>
+        <hr>
+        <h3>My First Webpage</h3>
+            <p>The best preparation for tomorrow is doing your best today. H. Jackson Brown, Jr.</p>
+            <p>Start by doing what's necessary; then do what's possible; and suddenly you are doing the impossible. Francis of Assisi</p>
+            <p>The best and most beautiful things in the world cannot be seen or even touched - they must be felt with the heart. Helen Keller</p>
+            <p>I can't change the direction of the wind, but I can adjust my sails to always reach my destination. Jimmy Dean
+                </p>
+            <p>Keep your face always toward the sunshine - and shadows will fall behind you. Walt Whitman
+                </p>
+            <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it. Steve Jobs
+                </p>
+            <p>My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion, some humor, and some style. Maya Angelou
+                </p>
+    </body>
 
 </html>
