--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -14,7 +14,7 @@
 					<li>Contact</li>
 				</ul>
 		</div>
-        <HR size="5" width="50%" align="center">
+        <HR size="10" width="50%">
         <h3>My First Webpage</h3>
             <p>The best preparation for tomorrow is doing your best today. H. Jackson Brown, Jr.</p>
             <p>Start by doing what's necessary; then do what's possible; and suddenly you are doing the impossible. Francis of Assisi</p>
