--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,15 +6,10 @@
         </title>
     </head>
     <body>
-      	<div id="navbar">
-				<ul>
-					<li>Home</li>
-					<li>About Me</li>
-					<li>Skills</li>
-					<li>Contact</li>
-				</ul>
-		</div>
-        <HR size="10" width="50%">
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <HR>
         <h3>My First Webpage</h3>
             <p>The best preparation for tomorrow is doing your best today. H. Jackson Brown, Jr.</p>
             <p>Start by doing what's necessary; then do what's possible; and suddenly you are doing the impossible. Francis of Assisi</p>
