[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,10 @@
 			<p id="name">ANKUR SINHA</p>
 			<a href="https://mail.google.com/mail/u/0/#inbox"><p id="email">ankur.sinha.95@gmail.com</p></a>
 		</div>
+		
+
+        <a href="https://www.facebook.com/profile.php?id=100008132984526" target="_blank"><img src="http://www.niftybuttons.com/scribble/facebook.png" border="0" margin="1px"></a><a href="https://twitter.com/ankursinha95" target="_blank"><img src="http://www.niftybuttons.com/scribble/twitter.png" border="0" margin="1px"></a><a href="https://plus.google.com/u/0/" target="_blank"><img src="http://www.niftybuttons.com/scribble/google.png" border="0" margin="1px"></a>
+
 		<div class="left">
                 		   <img src="http://i64.tinypic.com/j8d2wx.jpg" border="0" alt="Image and video hosting by TinyPic" style="height: 210px; width: 210px">
 		</div>
