--- a/ui/index.html
+++ b/ui/index.html
@@ -1,19 +1,69 @@
-<!doctype html>
-<html>
-    <head>
-        <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        
-            <p id="name">ANKUR SINHA</p>
-			<a href="https://mail.google.com/mail/u/0/#inbox"><p id="email">ankur.sinha.95@gmail.com</p></a>
-	
-		
-	        <img src="http://i64.tinypic.com/j8d2wx.jpg" border="0" alt="Image and video hosting by TinyPic" style="height: 210px; width: 210px">
+body {
+    background-image: url("http://www.pixeden.com/media/k2/galleries/220/003-wood-melamine-subttle-pattern-background-pat.jpg");
+}
 
-			<p>Rampur Colony QRS NO. 310/AB Jamalpur Munger - 811214</p>
-        
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-    </body>
-</html>
+div {
+	border-radius: 5px;
+}
+
+#header {
+	z-index: 1;
+	position: fixed;
+	width: 97.5%;
+	margin-top: -20px;
+	height: 60px;
+	margin-bottom: 10px;
+}
+
+#name {
+	float:left;
+	margin-left: 5px;
+	padding-top: 5px;
+	font-size: 16px;
+	font-family: Verdana, sans-serif;
+	color: #17202A;
+}
+
+#email{
+	float:right;
+	margin-right: 5px;
+	padding-top: 5px;
+	font-size: 16px;
+	font-family: Verdana, sans-serif;
+	color: #D0D3D4;
+}
+
+li {
+	list-style-type: square;
+}
+
+a:hover {
+	font-weight: bold;
+	color: #D0D3D4;
+}
+
+.left {
+	position: relative;
+	float: left;
+	margin-top: 50px;
+	width: 16%;
+	height: 600px;
+	color: #D0D3D4;
+	margin-bottom: 10px;
+}
+
+#footer {
+    z-index: -1;
+	position: relative;
+	height: 50px;
+	clear: both;
+	font-family: Verdana, sans-serif;
+	font-size: 14px;
+	text-align: center;
+	color: #D0D3D4;
+}
+
+#footer p {
+	position: relative;
+	padding-top: 15px;
+}
